Able to generate summaries sequentially