@@ -5,8 +5,7 @@ import com.redcat.tutorials.dataloader.exception.ControllerMethodNotFoundExcepti
 import com.redcat.tutorials.dataloader.exception.ProjectNotFoundException;
 import com.redcat.tutorials.dataloader.model.ApiMethodBody;
 import com.redcat.tutorials.dataloader.repository.ApiMethodBodyRepository;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -14,14 +13,14 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
+@Slf4j
 public class MethodBodyService {
-
-    private static final Logger logger = LoggerFactory.getLogger(MethodBodyService.class);
 
     private final ApiMethodBodyRepository apiMethodBodyRepository;
 
@@ -37,11 +36,11 @@ public class MethodBodyService {
      * @return List of method body responses
      */
     public List<MethodBodyResponse> getAllMethodBodiesForProject(String projectName) {
-        logger.info("Retrieving all method bodies for project: {}", projectName);
+        log.info("Retrieving all method bodies for project: {}", projectName);
 
         // Check if project exists
         if (!apiMethodBodyRepository.existsByProjectName(projectName)) {
-            logger.warn("Project not found: {}", projectName);
+            log.warn("Project not found: {}", projectName);
             throw new ProjectNotFoundException(projectName);
         }
 
@@ -67,12 +66,12 @@ public class MethodBodyService {
     public PaginatedResponse<MethodBodyResponse> getAllMethodBodiesForProjectPaginated(
             String projectName, int page, int size, String sortBy, String sortDirection) {
 
-        logger.info("Retrieving paginated method bodies for project: {}, page: {}, size: {}",
+        log.info("Retrieving paginated method bodies for project: {}, page: {}, size: {}",
                 projectName, page, size);
 
         // Check if project exists
         if (!apiMethodBodyRepository.existsByProjectName(projectName)) {
-            logger.warn("Project not found: {}", projectName);
+            log.warn("Project not found: {}", projectName);
             throw new ProjectNotFoundException(projectName);
         }
 
@@ -109,11 +108,11 @@ public class MethodBodyService {
      * @return Method body response
      */
     public MethodBodyResponse getMethodBodyForController(String projectName, String controllerMethod) {
-        logger.info("Retrieving method body for controller: {} in project: {}", controllerMethod, projectName);
+        log.info("Retrieving method body for controller: {} in project: {}", controllerMethod, projectName);
 
         // Check if project exists
         if (!apiMethodBodyRepository.existsByProjectName(projectName)) {
-            logger.warn("Project not found: {}", projectName);
+            log.warn("Project not found: {}", projectName);
             throw new ProjectNotFoundException(projectName);
         }
 
@@ -121,7 +120,7 @@ public class MethodBodyService {
         return apiMethodBodyRepository.findByProjectNameAndControllerMethod(projectName, controllerMethod)
                 .map(this::convertToMethodBodyResponse)
                 .orElseThrow(() -> {
-                    logger.warn("Controller method not found: {} in project: {}", controllerMethod, projectName);
+                    log.warn("Controller method not found: {} in project: {}", controllerMethod, projectName);
                     return new ControllerMethodNotFoundException(controllerMethod, projectName);
                 });
     }
@@ -139,9 +138,9 @@ public class MethodBodyService {
         response.setFound(true);
 
         // Convert method details
-        List<MethodBodyResponse.MethodDetail> methodDetails = apiMethodBody.getMethods().stream()
+        List<MethodBodyResponse.MethodDetailResponse> methodDetailResponses = apiMethodBody.getMethods().stream()
                 .map(detail -> {
-                    MethodBodyResponse.MethodDetail responseDetail = new MethodBodyResponse.MethodDetail();
+                    MethodBodyResponse.MethodDetailResponse responseDetail = new MethodBodyResponse.MethodDetailResponse();
                     responseDetail.setName(detail.getName());
                     responseDetail.setBody(detail.getBody());
                     responseDetail.setFilePath(detail.getFilePath());
@@ -149,28 +148,21 @@ public class MethodBodyService {
                 })
                 .collect(Collectors.toList());
 
-        response.setMethods(methodDetails);
+        response.setMethods(methodDetailResponses);
         response.setMessage("Method body retrieved successfully");
 
         return response;
     }
 
 
-    public ApiListResponse getAllTheControllerEndpoints(String projectName) {
-        List<MethodDetails> methodDetails = apiMethodBodyRepository.findByProjectName(projectName)
-                .stream()
-                .map(this::convertToMethodDetails)
-                .toList();
-        return ApiListResponse.builder()
-                .apiMethodList(methodDetails)
-                .found(true)
-                .message("Here are all the controller endpoints")
-                .projectName(projectName)
-                .build();
+    public List<ApiMethodBody> getAllTheControllerEndpoints(String projectName) {
+        return apiMethodBodyRepository.findByProjectName(projectName).stream()
+                .map(a -> {a.setMethods(new ArrayList<>()); return a;})
+                .collect(Collectors.toList());
     }
 
-    private MethodDetails convertToMethodDetails(ApiMethodBody apiMethodBody) {
-        return MethodDetails.builder()
+    private MethodDetailsResponse convertToMethodDetails(ApiMethodBody apiMethodBody) {
+        return MethodDetailsResponse.builder()
                 .methodName(apiMethodBody.getControllerMethod())
                 .filePath(apiMethodBody.getMethods().get(0).getFilePath())
                 .methodBody(apiMethodBody.getMethods().get(0).getBody())
@@ -178,11 +170,11 @@ public class MethodBodyService {
     }
 
     public MethodBodyResponse getAllMethodBodiesForCallGraph(String projectName, String endpointMethod) {
-        logger.info("Retrieving all method bodies for call graph for project: {}, endpoint: {}", projectName, endpointMethod);
+        log.info("Retrieving all method bodies for call graph for project: {}, endpoint: {}", projectName, endpointMethod);
 
         // Check if project exists
         if (!apiMethodBodyRepository.existsByProjectName(projectName)) {
-            logger.warn("Project not found: {}", projectName);
+            log.warn("Project not found: {}", projectName);
             throw new ProjectNotFoundException(projectName);
         }
 
@@ -195,8 +187,61 @@ public class MethodBodyService {
             response.setMessage("Method body retrieved successfully for call graph");
             return response;
         }).orElseThrow(() -> {
-            logger.warn("Controller method not found: {} in project: {}", endpointMethod, projectName);
+            log.warn("Controller method not found: {} in project: {}", endpointMethod, projectName);
             return new ControllerMethodNotFoundException(endpointMethod, projectName);
         });
+    }
+
+    /**
+     * Validates if any document exists with the specified project name
+     *
+     * @param projectName Name of the project to validate
+     * @return true if project exists, false otherwise
+     */
+    public boolean validateProjectExists(String projectName) {
+        log.info("Validating existence of project: {}", projectName);
+
+        if (projectName == null || projectName.trim().isEmpty()) {
+            log.warn("Project name is null or empty");
+            return false;
+        }
+
+        boolean exists = apiMethodBodyRepository.existsByProjectName(projectName);
+
+        if (exists) {
+            log.info("Project exists: {}", projectName);
+        } else {
+            log.warn("Project does not exist: {}", projectName);
+        }
+
+        return exists;
+    }
+
+    /**
+     * Count the total number of controller endpoints for a project
+     *
+     * @param projectName Name of the project
+     * @return Total number of controller endpoints or 0 if project doesn't exist
+     */
+    public int countTotalControllerEndpoints(String projectName) {
+        log.info("Counting total controller endpoints for project: {}", projectName);
+        
+        if (projectName == null || projectName.trim().isEmpty()) {
+            log.warn("Project name is null or empty");
+            return 0;
+        }
+        
+        // Check if project exists
+        if (!apiMethodBodyRepository.existsByProjectName(projectName)) {
+            log.warn("Project not found when counting endpoints: {}", projectName);
+            return 0;
+        }
+        
+        // Get all controller methods for the project and count them
+        List<ApiMethodBody> apiMethodBodies = apiMethodBodyRepository.findByProjectName(projectName);
+        int count = apiMethodBodies.size();
+        
+        log.info("Found {} controller endpoints for project: {}", count, projectName);
+        return count;
     }
 }
